# legalcur

./: README.md  main.py  pyproject.toml  test_gpu.py
app/: config.py  ingest.py  main.py  production_config.py  rag.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: utils.ts
storage/chroma/: chroma.sqlite3
