[project]
name = "lcur"
version = "0.1.0"
description = "Legal RAG API with Ollama"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.0.20",
    "rank-bm25>=0.2.2",
    "pydantic-settings>=2.1.0",
    "tqdm>=4.66.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.dependencies]
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
langchain = ">=0.1.0"
langchain-ollama = ">=0.1.0"
langchain-chroma = ">=0.1.0"
langchain-community = ">=0.0.20"
rank-bm25 = ">=0.2.2"
pydantic-settings = ">=2.1.0"
tqdm = ">=4.66.0"

[tool.uv.dev-dependencies]
pytest = ">=7.4.0"
httpx = ">=0.25.0"
